feat: arrumando estrutura do department  service